--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     <!-- البوب الثاني -->
     <div id="secondPopup" class="popup" style="display: none;">
         <button class="close-popup-btn" onclick="closeSecondPopup()">X</button> <!-- زر الإغلاق -->
-        <h2 id="secondPopupTitle">ادخل رقمك عشان تعرف كل العروض أول بأول!😍  </h2>
+        <h2 id="secondPopupTitle">ممكن رقمك عشان نبعت لك كل العروض أول بأول!😍  </h2>
         <input type="text" id="phoneNumber" placeholder="رقم الهاتف" maxlength="11">
         <button class="popup-close" onclick="submitPhoneNumber()" id="submitButton">إرسال</button>
     </div>
@@ -643,7 +643,7 @@
                 document.querySelector('#popup p').textContent = 'We hope you have a happy day. ❤️';
                 document.querySelector('.popup-close').textContent = 'Enjoy the menu';
                 document.querySelector('.footer p').textContent = 'Copyright © 2025 advertisingagency__o2 ';
-                document.getElementById('secondPopupTitle').textContent = 'Enter your number to get the latest offers 😍';
+                document.getElementById('secondPopupTitle').textContent = 'Can we have your number so we can send you all the offers first hand?😍';
                 document.getElementById('phoneNumber').placeholder = 'Phone Number';
                 document.getElementById('submitButton').textContent = 'Submit';
             } else {
@@ -656,7 +656,7 @@
                 document.querySelector('#popup p').textContent = 'نتمنى يكون يوم حضرتك سعيد. ❤️';
                 document.querySelector('.popup-close').textContent = 'استمتع بالمنيو';
                 document.querySelector('.footer p').textContent = 'حقوق الطبع والنشر © 2025 advertisingagency__o2';
-                document.getElementById('secondPopupTitle').textContent = ' ادخل رقمك عشان تعرف كل العروض أول بأول!😍 ';
+                document.getElementById('secondPopupTitle').textContent = ' ممكن رقمك عشان نبعت لك كل العروض أول بأول!😍 ';
                 document.getElementById('phoneNumber').placeholder = 'رقم الهاتف';
                 document.getElementById('submitButton').textContent = 'إرسال';
             }
